# OpenENV

./: .env.example  .gitignore  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_READY.md  Dockerfile  README.md  app.yml  deploy-setup.ps1  docker-compose.yml  entrypoint.sh  inference.py  quickstart.sh  requirements.txt  requirements_local.txt  run_demo.bat  spaces_app.py  test-docker.bat  test-docker.sh  train_easy.py  train_hard.py  train_medium.py  validator.py
.github/workflows/: deploy.yml
dashboard/: app.py  index.html
openenv/: __init__.py
openenv/core/: __init__.py  client_types.py  env_client.py
openenv/core/env_server/: __init__.py  http_server.py  interfaces.py  types.py
openenv_core_submission/: Dockerfile  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
openenv_core_submission/server/: __init__.py  agent_utils.py  app.py  easy_env.py  hard_env.py  medium_env.py  requirements.txt
